# windex

./: .containerignore  .coverage  .env.example  .gitignore  CLAUDE.md  Containerfile  README.md  compose.yaml  pyproject.toml
deploy/: com.windex.supervisor.plist  install-launchd.sh  newsyslog-windex.conf
docs/: arxiv-source.md  custom-sources.md  devdocs-source.md  embedding-quality-evaluation.md  hn-source.md  huggingface-source.md  operations.md  reranker-investigation.md  reranker-requant.md  search-overhaul-plan.md  smallweb-source.md  spark-prep.md  store-tuning.md  wikipedia-sources.md
ops/: README.md
ops/prometheus/: windex-scrape.yml
scripts/: dev.sh  embed_follower.sh  watchdog.sh
tests/: conftest.py  test_api.py  test_arxiv_harvest.py  test_ccnews_dedup.py  test_ccnews_extractor.py  test_ccnews_sync.py  test_cli_and_mcp.py  test_config.py  test_custom_sources.py  test_dateparse.py  test_db_reconnect.py  test_dedup_units.py  test_docs_source.py  test_download.py  test_embed_breaker.py  test_embed_budget.py  test_embed_http.py  test_embed_pipeline_driver.py  test_embed_pipelines.py  test_embed_resilience.py  test_eval_harness.py  test_eval_metrics.py  test_gh_discover.py  test_gh_hydrate.py  test_gh_tail.py  test_hf_crawl.py  test_hf_embed.py  test_hf_fetch.py  test_hf_sync.py  test_hn_cleanup.py  test_hn_harvest.py  test_index_and_search.py  test_jobs.py  test_lifecycle.py  test_logs.py  test_memory_source.py  test_outage_guards.py  test_prom.py  test_rerank.py  test_runner_and_scan.py  (+8 more)
tools/: build_rerank_calib.py  rerank_guardrail.py
(+92 files in other folders)
